main_product_add

--- a/index.html
+++ b/index.html
@@ -8,15 +8,47 @@
 </head>
 <body>
     <!-- Welcome Section -->
-    <div class="welcome-banner">
+    <header class="welcome-banner">
         <h1 class="animate-text">Welcome to DevHeal</h1>
-        <p>Where Technology Meets Creativity</p>
-    </div>
+        <p class="subtext">Transforming Ideas into Reality</p>
+        <p class="subtext">Where Technology Meets Creativity</p>
+    </header>
 
     <!-- Main Content -->
-    <div class="content">
-        <p>DevHeal: Transforming Ideas into Reality</p>
-    </div>
+    <main>
+        <section class="services">
+            <div class="service-box">
+                <h2>Web Development</h2>
+                <p>Building modern and responsive websites.</p>
+                <p>Experience seamless user experience across all devices.</p>
+                <a href="web-development.html" class="btn"><span>See All Services</span></a>
+            </div>
+            <div class="service-box">
+                <h2>Digital Marketing</h2>
+                <p>Enhancing your online presence and reaching new audiences.</p>
+                <p>Leverage the power of social media to grow your brand.</p>
+                <a href="digital-marketing.html" class="btn"><span>See All Services</span></a>
+            </div>
+            <div class="service-box">
+                <h2>Graphic Design</h2>
+                <p>Creative designs to bring your ideas to life.</p>
+                <p>Get unique and eye-catching designs for your business.</p>
+                <a href="graphic-design.html" class="btn"><span>See All Services</span></a>
+            </div>
+            <div class="service-box">
+                <h2>Video Production</h2>
+                <p>Captivating videos that tell your story.</p>
+                <p>Create professional video content for your brand.</p>
+                <a href="video-production.html" class="btn"><span>See All Services</span></a>
+            </div>
+            <div class="service-box">
+                <h2>Mobile App Development</h2>
+                <p>Creating user-friendly mobile applications.</p>
+                <p>Build mobile apps that users will love to use.</p>
+                <a href="mobile-app-development.html" class="btn"><span>See All Services</span></a>
+            </div>
+        </section>
+    </main>
     <!-- Footer Section -->
     <footer class="footer">
         <div class="footer-content">
