footer_style_add

--- a/index.html
+++ b/index.html
@@ -50,14 +50,23 @@
         </section>
     </main>
     <!-- Footer Section -->
-    <footer class="footer">
+    <div class="footer">
         <div class="footer-content">
+            <div class="footer-logo">DevHeal</div>
             <p>© 2024 DevHeal. All Rights Reserved.</p>
-            <p>Contact: 
-                <a href="tel:+8801615478445" class="contact-link">+8801615 478445</a> | 
-                Email: <a href="mailto:devheal4@gmail.com" class="contact-link">devheal4@gmail.com</a>
+            <p>
+                Contact: 
+                <a class="contact-link" href="tel:+8801615478445">+8801615 478445</a> | 
+                Email: 
+                <a class="contact-link" href="mailto:devheal4@gmail.com">devheal4@gmail.com</a>
             </p>
         </div>
-    </footer>
+        <ul class="social-icons">
+            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+        </ul>
+    </div>
 </body>
 </html>
