--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevHeal - Welcome</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 </head>
 <body>
     <!-- Welcome Section -->
@@ -51,9 +53,16 @@
     </main>
     <!-- Footer Section -->
     <div class="footer">
+        <!-- Social Media Icons -->
+        <ul class="social-icons">
+            <li><a href="tel:+8801615478445" aria-label="Call"><i class="fas fa-phone"></i></a></li>
+            <li><a href="https://wa.me/8801615478445" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="https://m.me/yourusername" target="_blank" aria-label="Messenger"><i class="fab fa-facebook-messenger"></i></a></li>
+            <li><a href="https://t.me/yourusername" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a></li>
+        </ul>
+
+        <!-- Contact Information -->
         <div class="footer-content">
-            <div class="footer-logo">DevHeal</div>
-            <p>© 2024 DevHeal. All Rights Reserved.</p>
             <p>
                 Contact: 
                 <a class="contact-link" href="tel:+8801615478445">+8801615 478445</a> | 
@@ -61,12 +70,12 @@
                 <a class="contact-link" href="mailto:devheal4@gmail.com">devheal4@gmail.com</a>
             </p>
         </div>
-        <ul class="social-icons">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-        </ul>
+
+        <!-- Footer Logo -->
+        <!-- Copyright Information -->
+        <div class="footer-content">
+            <p>© 2024 DevHeal. All Rights Reserved.</p>
+        </div>
     </div>
 </body>
 </html>
