--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>Digital Marketing</h2>
                 <p>Enhancing your online presence and reaching new audiences.</p>
                 <p>Leverage the power of social media to grow your brand.</p>
-                <a href="digital-marketing.html" class="btn"><span>See All Services</span></a>
+                <a href="Digital Marketing Services/index.html" class="btn"><span>See All Services</span></a>
             </div>
             <div class="service-box">
                 <h2>Graphic Design</h2>
