graphic design service add

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>Graphic Design</h2>
                 <p>Creative designs to bring your ideas to life.</p>
                 <p>Get unique and eye-catching designs for your business.</p>
-                <a href="graphic-design.html" class="btn"><span>See All Services</span></a>
+                <a href="Graphic Design Services/index.html" class="btn"><span>See All Services</span></a>
             </div>
             <div class="service-box">
                 <h2>Video Production</h2>
