update full website

--- a/index.html
+++ b/index.html
@@ -3,79 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevHeal - Welcome</title>
+    <meta name="description" content="DevHeal - Offering top-notch web development, digital marketing, graphic design, and mobile app development services.">
+    <meta name="keywords" content="Web Development, Digital Marketing, Graphic Design, Mobile App Development">
+    <meta name="author" content="DevHeal">
+    <title>DevHeal - Elevating Your Digital Presence</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
 </head>
 <body>
-    <!-- Welcome Section -->
-    <header class="welcome-banner">
-        <h1 class="animate-text">Welcome to DevHeal</h1>
-        <p class="subtext">Transforming Ideas into Reality</p>
-        <p class="subtext">Where Technology Meets Creativity</p>
+
+    <!-- Navigation -->
+    <nav>
+        <ul class="nav-list">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Hero Section -->
+    <header id="home" class="hero">
+        <h1>Welcome to DevHeal</h1>
+        <p>Transforming Ideas into Reality with Expertise</p>
+        <p>Where Technology Meets Creativity</p>
+        <a href="#services" class="btn">Explore Our Services</a>
     </header>
 
-    <!-- Main Content -->
-    <main>
-        <section class="services">
-            <div class="service-box">
-                <h2>Web Development</h2>
-                <p>Building modern and responsive websites.</p>
-                <p>Experience seamless user experience across all devices.</p>
-                <a href="Web_Development_Service/index.html" class="btn"><span>See All Services</span></a>
-            </div>
-            <div class="service-box">
-                <h2>Digital Marketing</h2>
-                <p>Enhancing your online presence and reaching new audiences.</p>
-                <p>Leverage the power of social media to grow your brand.</p>
-                <a href="Digital_Marketing_Services/index.html" class="btn"><span>See All Services</span></a>
-            </div>
-            <div class="service-box">
-                <h2>Graphic Design</h2>
-                <p>Creative designs to bring your ideas to life.</p>
-                <p>Get unique and eye-catching designs for your business.</p>
-                <a href="Graphic_Design_Services/index.html" class="btn"><span>See All Services</span></a>
-            </div>
-            <div class="service-box">
-                <h2>Video Production</h2>
-                <p>Captivating videos that tell your story.</p>
-                <p>Create professional video content for your brand.</p>
-                <a href="Video_Production_Services/index.html" class="btn"><span>See All Services</span></a>
-            </div>
-            <div class="service-box">
-                <h2>Mobile App Development</h2>
-                <p>Creating user-friendly mobile applications.</p>
-                <p>Build mobile apps that users will love to use.</p>
-                <a href="Mobile_App_Development_Services/index.html" class="btn"><span>See All Services</span></a>
-            </div>
-        </section>
-    </main>
-    <!-- Footer Section -->
-    <div class="footer">
-        <!-- Social Media Icons -->
-        <ul class="social-icons">
-            <li><a href="tel:+8801615478445" aria-label="Call"><i class="fas fa-phone"></i></a></li>
-            <li><a href="https://wa.me/8801615478445" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="https://m.me/yourusername" target="_blank" aria-label="Messenger"><i class="fab fa-facebook-messenger"></i></a></li>
-            <li><a href="https://t.me/yourusername" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a></li>
-        </ul>
-
-        <!-- Contact Information -->
-        <div class="footer-content">
-            <p>
-                Contact: 
-                <a class="contact-link" href="tel:+8801615478445">+8801615 478445</a> | 
-                Email: 
-                <a class="contact-link" href="mailto:devheal4@gmail.com">devheal4@gmail.com</a>
-            </p>
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2>Our Services</h2>
+        <div class="service-box">
+            <h3>Web Development</h3>
+            <p>We specialize in creating responsive and interactive websites with high performance, advanced functionality, and unique designs that stand out from the competition.</p>
+            <p>Our websites ensure cross-device compatibility, optimized loading times, and user-friendly navigation to boost engagement.</p>
         </div>
-
-        <!-- Footer Logo -->
-        <!-- Copyright Information -->
-        <div class="footer-content">
-            <p>© 2024 DevHeal. All Rights Reserved.</p>
+        <div class="service-box">
+            <h3>Digital Marketing</h3>
+            <p>Maximize your online presence with tailored digital marketing strategies. From SEO optimization to social media marketing, we ensure your brand reaches the right audience.</p>
+            <p>Our campaigns are data-driven and aim to convert visitors into loyal customers.</p>
         </div>
-    </div>
+        <div class="service-box">
+            <h3>Graphic Design</h3>
+            <p>Our creative team brings your ideas to life with compelling graphic designs that capture your brand’s essence. We create logos, brochures, and visual content tailored to your business needs.</p>
+        </div>
+        <div class="service-box">
+            <h3>Mobile App Development</h3>
+            <p>Developing user-friendly mobile applications designed to provide seamless experiences for both iOS and Android users. Our apps are built to meet your business needs and improve user retention.</p>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>DevHeal is committed to turning your innovative ideas into reality by combining modern technology with creativity. We bring years of expertise in various domains to ensure your project stands out.</p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <p>Email: <a href="mailto:devheal4@gmail.com">devheal4@gmail.com</a></p>
+        <p>Phone: <a href="tel:+8801615478445">+8801615 478445</a></p>
+        <p>
+            Messenger: <a href="https://m.me/yourusername" target="_blank">Chat on Messenger</a><br>
+            WhatsApp: <a href="https://wa.me/8801615478445" target="_blank">Chat on WhatsApp</a><br>
+            Telegram: <a href="https://t.me/yourusername" target="_blank">Join us on Telegram</a><br>
+            Facebook: <a href="https://www.facebook.com/yourpage" target="_blank">Follow us on Facebook</a><br>
+            YouTube: <a href="https://www.youtube.com/yourchannel" target="_blank">Subscribe to our YouTube</a><br>
+            LinkedIn: <a href="https://www.linkedin.com/in/yourusername" target="_blank">Connect on LinkedIn</a>
+        </p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2024 DevHeal. All Rights Reserved.</p>
+    </footer>
+
 </body>
 </html>
